Salesforce/main/default/main/default/objects/dfsle__EnvelopeStatus__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>