Salesforce/main/default/main/default/objects/dfsle__EnvelopeStatus__c/fields/Contrato_de_Multiplicacao__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Multiplicacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Multiplicação</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>