Salesforce/main/default/main/default/objects/dfsle__EnvelopeStatus__c/fields/Precisa_Assinar__c.field-meta.xml
<CustomField>
    <fullName>Precisa_Assinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Precisa Assinar</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>